--- a/app/globals.css
+++ b/app/globals.css
@@ -164,5 +164,7 @@
 }
 
 .left-shadow {
-  box-shadow: -20px 0px 20px 7px rgba(0, 0, 0, 0.4);
+  @media screen and (max-width: 1280px){
+    box-shadow: -20px 0px 20px 7px rgba(0, 0, 0, 0.4);
+  }
 }
