Add html generation clipboard action

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -79,7 +79,7 @@
   transition: border-radius 0.3s ease;
   position: relative !important;
 }
-
+/* 
 .taglike::after,
 .taglike::before {
   transition: all 0.3s ease;
@@ -120,4 +120,4 @@
 
 .taglike:hover::before {
   left: -30px;
-}
+} */
